# SupervisedDescentMethod

./: CMakeLists.txt  build.sh  readme.md  run.sh  test_sdm_facealign.cpp  train_sdm_facealign.cpp
500_lines_vs2015/: readme.md  sdm_common.h  train_sdm_facealign.cpp
examples/: .test_image.cpp.swp  test_image.cpp  test_testset.cpp  test_webcam.cpp  train_sdm_facealign.cpp
helen/: readme
helen/testset/: ptlist.txt
helen/trainset/: 1629243_1.pts  ptlist.txt
src/: sdm_common.h  sdm_fit.cpp  sdm_fit.h  test_image.cpp  test_sdm_facealign.cpp  train_sdm_facealign.cpp
